<resources>
    <string name="app_name">My Application</string>
    <string name="button">Button</string>
    <string name="imagen">TODO</string>
    <string name="nombre">Nombre</string>
    <string name="login">Login</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="todo">TODO</string>
    <string name="todos">TODO</string>
    <string name="camara">Camara</string>
    <string name="email">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrars">Registrar</string>
    <string name="nnombre">Nombre</string>
    <string name="ccorreo">Correo</string>
    <string name="ccontrase_a">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro">Registro</string>
</resources>